🚀 Sistema de Asistencia ISIS2007 con Integración Airtable
✨ Nuevas Funcionalidades:
- Sistema de asistencia completo con autenticación
- Integración automática con Airtable
- Ruleta de estudiantes con nombres reales
- Navegación mejorada entre páginas
- Contraseñas seguras implementadas

📊 Características Técnicas:
- Sincronización automática con Airtable
- Backup local en localStorage
- Interfaz responsive y moderna
- Sistema de roles (Profesor/Monitores)
- Exportación de datos en JSON

🔧 Archivos Principales:
- asistencia.html: Sistema de asistencia principal
- airtable-config.js: Configuración de Airtable
- airtable-service.js: Servicio de sincronización
- ruleta-estudiantes.html: Ruleta de estudiantes
- README-ASISTENCIA.md: Documentación completa

✅ Estado: Listo para producción

--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Convert HTML pages to PDF for ISIS2007 course",
   "main": "convert-to-pdf.js",
   "scripts": {
-    "convert": "node convert-to-pdf.js"
+    "convert": "node convert-to-pdf.js",
+    "export-all": "node export-all-to-pdf.js"
   },
   "dependencies": {
-    "puppeteer": "^21.0.0"
+    "puppeteer": "^21.0.0",
+    "xlsx": "^0.18.5"
   },
-  "keywords": ["pdf", "html", "conversion"],
+  "keywords": [
+    "pdf",
+    "html",
+    "conversion"
+  ],
   "author": "ISIS2007 Team"
-} 
+}
