📚 Agregar archivos PDF del curso a GitHub
- ✅ Subir todos los 11 archivos PDF de Archivos_de_Curso/
- 🔧 Modificar .gitignore para permitir PDFs en Archivos_de_Curso/
- 📖 Incluir: Canvas, Tips, Pitch Decks, UI/UX, Monetización, etc.
- 🎯 Habilitar visualización directa de PDFs en GitHub Pages
- 📱 Archivos disponibles para descarga y visualización web

--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,8 @@ build/
 # PDF files (optional - remove if you want to include them)
 *.pdf
 
+# Allow PDFs in Archivos_de_Curso folder
+!Archivos_de_Curso/*.pdf
+
 # Excel files with temporary names
 ~$*.xlsx 
